--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "start-server": "node app.js"
   },
   "repository": {
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/GeekOnly/Node.js/issues"
   },
-  "homepage": "https://github.com/GeekOnly/Node.js#readme"
+  "homepage": "https://github.com/GeekOnly/Node.js#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
