66. Limiting Middleware Execution to POST Requests

--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/GeekOnly/Node.js#readme",
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
